tests/sema/fail/v20_fail_str_concat_mixed.ep
# COMPILE_FAIL_CONTAINS: string concatenation requires str operands, got str and i64
fun main(): void {
    let text = "value=" + 1
}
